--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -4,7 +4,7 @@
          <!-- Logo Web / Judul -->
          <div class="col-sm-4 col-md-12 col-xxl-3 title-wrap">
             <div class="title">
-               <h3>CONCERT TICKET</h3>
+               <h3 (click)="goToHome()">CONCERT TICKET</h3>
             </div>
          </div>
 
