--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -15,7 +15,7 @@
                <ul class="d-flex list-group list-group-horizontal text-white">
                   <li class="fw-bold px-4 py-2 nav-link"><a (click)="goToHome()"><span class="nav-text">HOME</span></a>
                   </li>
-                  <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">TICKETS</span></a></li>
+                  <li class="fw-bold px-4 py-2 nav-link"><a (click)="goToTicketList()"><span class="nav-text">TICKETS</span></a></li>
                   <li class="fw-bold px-4 py-2 nav-link dropdown">
                      <a class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"><span
                            class="nav-text">ABOUT</span></a>
