--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -2,7 +2,7 @@
    <div
       class="g-0 row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
       <div class="d-flex justify-content-center align-items-center">
-         <div class="title-underline px-4 pb-2 d-flex align-items-center justify-content-center">
+         <div class="title-underline px-4 pb-2 p-responsive d-flex align-items-center justify-content-center">
             <h1 class="fw-bolder">CONCERT TICKET</h1>
          </div>
       </div>
@@ -10,7 +10,7 @@
       <div class="p-0 col-12 w-content h-footer-content text-white row">
 
          <!-- Information -->
-         <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
             <div class="w-75 h-100 pt-2">
                <h5 class="mb-4 fw-bold">Information</h5>
 
@@ -37,7 +37,7 @@
          </div>
 
          <!-- Social Media -->
-         <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center ">
+         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center ">
             <div class="w-75 h-100 pt-2">
                <h5 class="mb-4 fw-bold">Follow Us</h5>
 
@@ -65,7 +65,7 @@
          </div>
 
          <!-- Support -->
-         <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
             <div class="w-75 h-100 pt-2">
                <h5 class="mb-4 fw-bold">Support</h5>
 
@@ -89,7 +89,7 @@
          </div>
 
          <!-- Go Back to -->
-         <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="col-xl-3 col-lg-6 px-3 d-flex justify-content-center">
             <div class="w-75 h-100 pt-2">
                <h5 class="mb-4 fw-bold">Back to navigate</h5>
 
