adding selection seats feature

--- a/src/app/seat-selection/seat-selection/seat-selection.html
+++ b/src/app/seat-selection/seat-selection/seat-selection.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="map-footer">
-         <button class="book-button" [disabled]="!isAnySeatSelected" (click)="bookSelectedSeats()">Book Selected Seats
+         <button class="book-button" [disabled]="!isAnySeatSelected">Book Selected Seats
             ({{ getSelectedSeats().length
             }})</button>
       </div>
